<resources>
    <string name="app_name">PU FOOD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首頁</string>
    <string name="collect">收藏</string>
    <string name="information">店家資訊</string>
    <string name="about">關於</string>
    <string name="login">登入</string>
    <string name="service">意見回饋</string>
    <string name="profile">個人中心</string>
    <string name="profile1">會員資料</string>
    <string name="user_name">使用者名稱</string>
    <string name="user_photo">使用者圖片</string>
    <string name="review">查看先前評論</string>
    <string name="feedback">意見回饋</string>
    <string name="delete">刪除</string>
    <string name="submit">傳送</string>
    <string name="password">更改密碼</string>
    <string name="enterold">舊密碼</string>
    <string name="enternew">新密碼</string>
    <string name="againnew">確認新密碼</string>
    <string name="shop_name">店家名稱</string>
    <string name="shop_name1">麥味登</string>
    <string name="shop_name2">Box brunch</string>
    <string name="shop_name3">弘爺漢堡</string>
    <string name="shop_name4">橘子熊早午晚餐</string>
    <string name="shop_name5">告胖炭烤土司</string>
    <string name="shop_name6">樂窩本玩</string>
    <string name="shop_name7">Ｍorni莫尼早餐</string>
    <string name="shop_name8">吐司森林 沙鹿靜宜店</string>
    <string name="shop_name9">夏米東東</string>
    <string name="shop_name10">韓味煮藝</string>
    <string name="shop_name11">X麻尹 日式丼飯</string>
    <string name="account">帳號</string>
    <string name="password1">密碼</string>
    <string name="account1">請輸入帳號</string>
    <string name="password2">請輸入密碼</string>
    <string name="login1">登入</string>
    <string name="account2">a1234567</string>
    <string name="change">修改資料</string>
    <string name="birth">生日 :</string>
    <string name="birth1">2000-01-01</string>
    <string name="phone">手機號碼 :</string>
    <string name="phone1">0978123456</string>
    <string name="mail">電子郵件 :</string>
    <string name="mail1">a123456@gmail.com</string>
    <string name="thank">感謝您的評論：）</string>
    <string name="back">返回主頁</string>
    <string name="breakfast">早餐</string>
    <string name="lunch">午餐</string>
    <string name="dinner">晚餐</string>
</resources>