<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


    <EditText
        android:id="@+id/et3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide3"
        android:background="@drawable/shape"
        android:layout_margin="20dp"
        android:inputType="text"
        android:maxLength="10"
        android:ems="10"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/enterold"/>

    <EditText
        android:id="@+id/et4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et3"
        android:background="@drawable/shape"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:ems="10"
        android:maxLength="10"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/enternew" />

    <EditText
        android:id="@+id/et5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et4"
        android:background="@drawable/shape"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:ems="10"
        android:maxLength="10"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/againnew" />

    <Button
        android:id="@+id/btnpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_margin="20dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/et5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@null"
        android:background="@drawable/shape1"/>

</androidx.constraintlayout.widget.ConstraintLayout>