<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:src="@drawable/pu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guide1">
    </ImageView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide1"
        android:background="@drawable/shape"
        android:layout_margin="20dp"
        android:inputType="text"
        android:maxLength="10"
        android:ems="10"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/account1"/>

    <EditText
        android:id="@+id/et2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et1"
        android:background="@drawable/shape"
        android:inputType="textPassword"
        android:layout_margin="20dp"
        android:ems="10"
        android:maxLength="10"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/password2" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login1"
        android:layout_margin="20dp"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/et2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@null"
        android:background="@drawable/shape1"/>

</androidx.constraintlayout.widget.ConstraintLayout>